# schemas/openapi.yaml
@@ -19,6 +19,8 @@ tags:
     description: Access and perform CRUD operations on products entries.
   - name: categories
     description: Access and perform CRUD operations on Category entries.
+  - name: orders
+    description: Access and perform CRUD operations on orders entries.
 
   
 paths:
@@ -126,6 +128,8 @@ paths:
               application/json:
                 schema:
                   $ref: ./user.json#/definitions/userCreated
+          '400':
+            description: user not created.
       
       get:
         tags:
@@ -245,6 +249,8 @@ paths:
               application/json:
                 schema:
                   $ref: ./products.json#/definitions/ProductCreated
+          '400':
+            description: product not created.
       
       get:
         tags:
@@ -368,6 +374,8 @@ paths:
               application/json:
                 schema:
                   $ref: ./category.json#/definitions/categoryCreated
+          '400':
+            description: category not created.
       
       get:
         tags:
@@ -384,4 +392,127 @@ paths:
           '404':
             description: unauthorised
 
-                  
+
+
+
+
+
+
+
+
+
+  /orders/{id}:
+    parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric id of the order
+    get:
+      tags:
+        - orders
+      description:
+        Get orders by ID.
+      responses:
+        '200':
+          description: View of a orders's record.
+          content:
+            application/json:
+              schema:
+                $ref: ./orders.json#/definitions/GetByIdResponse
+        
+        '404':
+          description: orders was not found in the DB.
+
+    put:
+      tags:
+        - orders 
+      description:
+        Update orders by ID.
+      requestBody:
+          description: user login details
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: ./user.json#/definitions/userlogin
+      responses:
+        '200':
+          description: Update confirmation and link to record.
+          content:
+            application/json:
+              schema:
+                $ref: ./orders.json#/definitions/GetByIdResponse
+        '404':
+          description: order was not found in the DB.
+
+    
+    delete:
+      tags:
+        - orders 
+      description:
+        Delete order by ID.
+      requestBody:
+          description: user login details
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: ./user.json#/definitions/userlogin
+      responses:
+        '200':
+          description: Delete confirmation.
+          content:
+            application/json:
+              schema:
+                $ref: ./orders.json#/definitions/deleteResponse
+        '401':
+          description: Only admin users can delete orders.
+        '404':
+          description: order was not found in the DB.
+
+
+  /orders:
+      summary: Represents an individual orders
+      description: >
+        This resource represents an orders in the system.
+        Each user is identified by a numeric `id`.
+      post:
+        tags:
+          - orders 
+        description:
+          Create a new order.
+        requestBody:
+          description: new order data.
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: ./orders.json#/definitions/orders
+        responses:
+          '201':
+            description: orders created
+            content:
+              application/json:
+                schema:
+                  $ref: ./orders.json#/definitions/ordersCreated
+          '400':
+            description: order not created.
+      
+      get:
+        tags:
+          - orders 
+        description:
+          get all orders.
+        responses:
+          '200':
+            description: show all the order
+            content:
+              application/json:
+                schema:
+                  $ref: ./orders.json#/definitions/GetAllorders
+          '404':
+            description: unauthorised
+
+
